(feat): coverage tests successfully made